20070910
	update spki(2) [change handling of hashes, add signature functions] appl/lib/spki/spki.b module/spki.m, updated for GSoC
20070906
	add toreal to string(2)
20070905
	/appl/cmd/ed.b (caerwyn's fix for g/.../d)
	also /appl/lib/ecmascript/builtin.b (toupper fix)
20070902
	make /appl/lib/daytime.b accept Daytime->text's output; add string2tm to man page (issue 59)
20070901
	add andrey's changes to emu/MacOSX/win.c (used by emu/MacOSX/mkfile-a)
	add saoret's changes to dis/lookman, dis/man (issue 58)
	add micah.stetson's change to /appl/cmd/src.b (issue 57)
20070817
	two old changes that weren't in the distribution...
	libkeyring/rsaalg.c: previously failed to ensure the output key was the right length (really rsagen should do that)
	libinterp/alt.c: use a better random number generator
20070814
	bufio.b didn't update the buffer pointers correctly on write errors
20070807
	libinterp/keyring.c don't include owner= if owner is nil or ""
	add auth/rsagen
20070806
	/module/lists.m add PATH(!), also simplify concat implementation
20070725
	/dis/man initialise fils correctly to empty list and remove hack (issue 56)
20070720
	utils/5l/asm.c: ensure SBZ field in MOV is regarded as MBZ (ie, force to zero)
20070714
	add Sys->readn, update sys-read(2)
	copy two repairs from emu/port/inferno.c to os/port/inferno.c
	remove readn implementation from several commands
	print correct diagnostic in appl/cmd/crypt.b
	prevent window titlebars from being dragged out of the main window in wm/wm.b
20070619
	remembered to include /appl/cmd/trfs.b /dis/trfs.dis
20070614
	/appl/lib/venti.b bug fixes, a few more errstrs, remove prints to stderr
	add initial module/vac.m appl/lib/vac.b from mjl (gsoc project ventivac)
	add initial /appl/cmd/^(vacfs.b vacget.b vacput.b) /man/4/vacfs /man/1/vacget from mjl (gsoc:ventivac)
	include omitted man/mkfile man/lib
20070608